# nvda-addon-migrator

./: .gitignore  .pre-commit-config.yaml  README.md  nvda-addon-migrator.spec  pyproject.toml
.github/workflows/: buildExecutable.yaml
src/nvda_migrator/: __init__.py  migrate.py
