[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nvda-addon-migrator"
version = "1.0.0"
description = "An automated, AST-based industrial tool to update NVDA add-ons to the latest nvaccess/AddonTemplate framework."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "GPL-2.0-or-later" }
authors = [
	{ name = "Abdelkrim BENSAÏD", email = "abdelkrim.bensaid@gmail.com" }
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.13",
	"Topic :: Software Development :: Build Tools",
]

# Core dependencies required to run the script
dependencies = [
	"tomlkit>=0.12.0",
]

# Optional dependencies for development and executable building
[project.optional-dependencies]
dev = [
	"ruff>=0.15.9",
	"pyright[nodejs]>=1.1.407",
	"uv>=0.11.7",
	"pre-commit>=4.2.0",
]
build = [
	"pyinstaller>=6.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nvda_migrator"]

# -----------------------------------------------------------------------------
# Ruff Configuration (Inspired by NVDA coding standards)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 110
target-version = "py313"
builtins = [
	"_",
	"ngettext",
	"pgettext",
	"npgettext",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D"]
ignore = [
	"D203", "D213",
	"W191", # Ignore l'avertissement sur les tabulations
]

[tool.ruff.format]
indent-style = "tab" # Style NVDA obligatoire
line-ending = "lf"

# -----------------------------------------------------------------------------
# Pyright Configuration (Adjusted for progressive typing)
# -----------------------------------------------------------------------------
[tool.pyright]
venvPath = ".venv"
venv = "."
pythonPlatform = "Windows"
typeCheckingMode = "standard" # Passé de strict à standard pour autoriser le typage progressif

include = [
	"src/**/*.py",
	"migrate.py",
]

# Règles de base conservées de NVDA
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true

# Désactivation des alertes bloquantes sur le code non encore totalement annoté
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
